--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "form-data": "^4.0.0",
     "google-auth-library": "^8.7.0",
     "http-status-codes": "^2.2.0",
+    "husky": "^8.0.3",
     "ioredis": "^5.2.5",
     "is-base64": "^1.1.0",
     "isolated-vm": "^4.6.0",
